--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+  <script async defer src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
 </body>
 
 </html>
