feat: add discord

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,13 @@
 
 <body>
   <div id="root"></div>
+  <!-- 
+    Wer das liest ist eindeutig doof. 
+    Falls jemand mehr über mich oder meine Webseite wissen möchte,
+    kann er mich gerne per E-Mail anschreiben.
+
+    info@nbank.dev
+   -->
   <script async defer src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
 </body>
 
