--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
     info@nbank.dev
    -->
   <script async defer src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
+  <script async defer data-website-id="09ce93ce-d466-407e-b128-8e510d21c038" src="https://umami.cloudron.nbank.dev/umami.js"></script>
 </body>
 
 </html>
