--- a/public/index.html
+++ b/public/index.html
@@ -20,8 +20,9 @@
 
     info@nbank.dev
    -->
-  <script async defer src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
   <script async defer data-website-id="09ce93ce-d466-407e-b128-8e510d21c038" src="https://umami.cloudron.nbank.dev/umami.js"></script>
+  <script async src="https://api.kiprotect.com/v1/privacy-managers/077ef02cda9490122cbc22fb59692cf4/klaro.js">
+</script>
 </body>
 
 </html>
